css reset, base styles, typography

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Learn Alert</h1>
+<main>
+    <h1>Learn Alert</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui molestias saepe voluptatem eaque tempore ipsum omnis
+        facilis voluptates dolorum iusto!</p>
+</main>
 {% endblock %}
