--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,167 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        /* reset; inspiration from Josh Comeau and others */
+        /* https://www.joshwcomeau.com/css/custom-css-reset/ */
+
+        :root {
+            /* colors */
+            --yellow-300: 48, 100%, 65%;
+            --yellow: 48, 89%, 61%;
+            --dark-gray-300: 220, 4%, 18%;
+            --dark-gray: 220, 4%, 15%;
+            --dark-gray-500: 220, 4%, 13%;
+
+            --primary: hsl(var(--yellow));
+            --secondary: hsl(var(--dark-gray));
+
+            --background-color: var(--secondary);
+            --color: var(--primary);
+            /* typography */
+            --font-family: system-ui, sans-serif;
+            --heading-font-family: ui-rounded, 'Hiragino Maru Gothic ProN', Quicksand,
+                Comfortaa, Manjari, 'Arial Rounded MT', 'Arial Rounded MT Bold', Calibri,
+                source-sans-pro, sans-serif;
+            --font-size: clamp(1rem, calc(0.4vw + 1rem), 2rem);
+            --line-height: 1.6;
+            --heading-line-height: 1.15;
+            --measure: 80ch;
+            /* elevations */
+            --shadow-sm: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+            --shadow-md: 0 10px 15px -3px rgb(0 0 0 / 0.1),
+                0 4px 6px -4px rgb(0 0 0 / 0.1);
+            --shadow-lg: 0 20px 25px -5px rgb(0 0 0 / 0.1),
+                0 8px 10px -6px rgb(0 0 0 / 0.1);
+        }
+
+        *,
+        *::before,
+        *::after {
+            box-sizing: border-box;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        :where(:root) {
+            background-color: var(--background-color);
+            color: var(--color);
+            font-weight: var(--font-weight);
+            font-size: var(--font-size);
+            line-height: var(--line-height);
+            font-family: var(--font-family);
+            overflow-wrap: break-word;
+            cursor: default;
+            text-rendering: optimizeSpeed;
+            -webkit-font-smoothing: antialiased;
+        }
+
+        html {
+            scrollbar-width: thin;
+            scrollbar-color: var(--color) hsl(var(--dark-gray-500));
+        }
+
+        ::-webkit-scrollbar {
+            background-color: hsl(var(--dark-gray-500));
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: var(--color);
+        }
+
+        html:focus-within {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            min-height: 100vh;
+            min-height: 100dvh;
+        }
+
+        :where(img, picture, video, canvas, svg) {
+            display: block;
+            font-style: italic;
+            text-align: center;
+            max-width: 100%;
+            height: auto;
+        }
+
+        :where(input, button, textarea, select) {
+            font: inherit;
+        }
+
+        :where(p, h1, h2, h3, h4, h5, h6, li) {
+            max-inline-size: var(--measure);
+        }
+
+        :where(h1, h2, h3, h4, h5, h6) {
+            line-height: var(--heading-line-height);
+            font-family: var(--heading-font-family);
+            font-weight: 600;
+            letter-spacing: -0.022em;
+            margin-top: 2.25rem;
+            margin-bottom: 1rem;
+            text-wrap: balance;
+        }
+
+        h1 {
+            font-size: 2.986rem;
+            margin-top: 0;
+        }
+
+        h2 {
+            font-size: 2.488rem;
+        }
+
+        h3 {
+            font-size: 2.074rem;
+        }
+
+        h4 {
+            font-size: 1.728rem;
+        }
+
+        h5 {
+            font-size: 1.44rem;
+        }
+
+        small {
+            font-size: 0.889rem;
+        }
+
+        a {
+            color: var(--color);
+            text-decoration: none;
+        }
+
+        a:hover,
+        a:focus {
+            opacity: 0.85;
+        }
+
+        p {
+            text-wrap: pretty;
+        }
+
+        @media (prefers-reduced-motion: reduce) {
+            html:focus-within {
+                scroll-behavior: auto;
+            }
+
+            *,
+            *::before,
+            *::after {
+                animation-duration: 0.01ms !important;
+                animation-iteration-count: 1 !important;
+                transition-duration: 0.01ms !important;
+                scroll-behavior: auto !important;
+            }
+        }
+    </style>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
     <title>{% block title %}Learn Alert{% endblock %}</title>
 </head>
 
