add YtEmbed; adjusted site colors; added nav and index styles; YtEmbed works

--- a/apps/main/static/styles.css
+++ b/apps/main/static/styles.css
@@ -5,11 +5,20 @@ body {
   grid-template-rows: auto 1fr auto;
 }
 
-main {
-  display: grid;
-  margin-block: 0;
+.wrapper {
   margin-inline: auto;
   width: min(90%, 1000px);
+}
+
+.sr-only {
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
 }
 
 svg {
