--- a/templates/partials/_navigation.html
+++ b/templates/partials/_navigation.html
@@ -1,5 +1,33 @@
+<style>
+    header {
+        margin-block: 1rem;
+    }
+
+    nav {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    nav .logo {
+        font-size: 1.5rem;
+        margin-right: auto;
+    }
+
+    nav ul {
+        display: flex;
+        list-style: none;
+        gap: 1rem;
+    }
+</style>
+
 <header>
     <nav>
-
+        <span class="logo"><a href="{% url 'main:index' %}">Learn Alert</a></span>
+        <ul>
+            <li><a href="#">Videos</a></li>
+            <li><a href="#">Posts</a></li>
+            <li><a href="#">About</a></li>
+        </ul>
     </nav>
 </header>
