--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -14,6 +14,19 @@
         border-radius: 8px;
         flex: 1 0 10rem;
     }
+
+    .index-section-post-wrapper article {
+        margin-block-end: 2rem;
+    }
+
+    .post-title {
+        font-size: 1.5rem;
+    }
+
+    .post-description {
+        font-size: 1.1rem;
+        margin-bottom: .8rem;
+    }
 </style>
 
 
@@ -32,6 +45,26 @@
 
 <section class="index-section posts">
     <h2>Latest Posts</h2>
+    <div class="index-section-post-wrapper">
+        <article>
+            <p class="post-title">Post Title</p>
+            <p class="post-description">Description text</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio aliquam laborum accusantium
+                maiores. Possimus.</p>
+        </article>
+        <article>
+            <p class="post-title">Post Title</p>
+            <p class="post-description">Description text</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio aliquam laborum accusantium
+                maiores. Possimus.</p>
+        </article>
+        <article>
+            <p class="post-title">Post Title</p>
+            <p class="post-description">Description text</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio aliquam laborum accusantium
+                maiores. Possimus.</p>
+        </article>
+    </div>
 </section>
 
 {% endblock %}
