added purgeCSS, style changes, script to run purgeCSS

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -12,7 +12,7 @@
     .index-video {
         aspect-ratio: 1/1;
         border-radius: 8px;
-        flex: 1 0 10rem;
+        flex: 1 0 15rem;
     }
 
     .index-section-post-wrapper article {
@@ -47,22 +47,31 @@
     <h2>Latest Posts</h2>
     <div class="index-section-post-wrapper">
         <article>
-            <p class="post-title">Post Title</p>
-            <p class="post-description">Description text</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio aliquam laborum accusantium
-                maiores. Possimus.</p>
+            <a href="">
+                <h2 class="post-title">Post Title</h2>
+                <p class="post-description">Description text</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio aliquam laborum
+                    accusantium
+                    maiores. Possimus.</p>
+            </a>
         </article>
         <article>
-            <p class="post-title">Post Title</p>
-            <p class="post-description">Description text</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio aliquam laborum accusantium
-                maiores. Possimus.</p>
+            <a href="">
+                <h2 class="post-title">Post Title</h2>
+                <p class="post-description">Description text</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio aliquam laborum
+                    accusantium
+                    maiores. Possimus.</p>
+            </a>
         </article>
         <article>
-            <p class="post-title">Post Title</p>
-            <p class="post-description">Description text</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio aliquam laborum accusantium
-                maiores. Possimus.</p>
+            <a href="">
+                <h2 class="post-title">Post Title</h2>
+                <p class="post-description">Description text</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus distinctio aliquam laborum
+                    accusantium
+                    maiores. Possimus.</p>
+            </a>
         </article>
     </div>
 </section>
