--- a/templates/partials/_navigation.html
+++ b/templates/partials/_navigation.html
@@ -1,26 +1,3 @@
-<style>
-    header {
-        margin-block: 1rem;
-    }
-
-    nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    nav .logo {
-        font-size: 1.5rem;
-        margin-right: auto;
-    }
-
-    nav ul {
-        display: flex;
-        list-style: none;
-        gap: 1rem;
-    }
-</style>
-
 <header>
     <nav>
         <span class="logo"><a href="{% url 'main:index' %}">Learn Alert</a></span>
@@ -31,3 +8,4 @@
         </ul>
     </nav>
 </header>
+<hr class="content-line">
