moved static files; implemented dark/light theme

--- a/apps/main/static/css/styles.css
+++ b/apps/main/static/css/styles.css
@@ -15,7 +15,6 @@
   --shadow-lg: 0 20px 25px -5px rgb(0 0 0 / 0.1),
     0 8px 10px -6px rgb(0 0 0 / 0.1);
 
-  font-weight: var(--font-weight);
   font-size: var(--font-size);
   line-height: var(--line-height);
   font-family: var(--font-family);
@@ -45,9 +44,9 @@ html:focus-within {
   font: inherit;
 }
 
-:where(p, h1, h2, h3, h4, h5, h6, li) {
+/* :where(p, h1, h2, h3, h4, h5, h6, li) {
   max-inline-size: var(--measure);
-}
+} */
 
 :is(h1, h2, h3, h4, h5, h6) {
   line-height: var(--heading-line-height);
@@ -103,6 +102,7 @@ p {
   position: absolute;
 }
 
+/* templates/partials/_navigation.html */
 header {
   background: var(--pico-background-color) 08;
   margin-block: 0;
@@ -126,14 +126,53 @@ nav ul {
   gap: 1rem;
 }
 
-.header-divider {
-  margin: 0;
+.dark-mode-toggle {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+/* i want to get rid of the content ::before thats on the .dark-mode-toggle's parent */
+nav li:last-of-type::before {
+  content: none;
 }
 
 .content-line {
   margin: 0;
 }
 
+/* templates/partials/_footer.html */
 footer {
   margin-block: 1em;
+}
+
+footer ul {
+  margin: 0;
+}
+
+footer ul li {
+  list-style: none;
+}
+
+/* templates/main/index.html */
+.index-flex {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  margin-block: 1rem;
+}
+
+.index-video {
+  aspect-ratio: 1/1;
+  border-radius: 8px;
+  flex: 1 0 13rem;
+}
+
+.post-title {
+  font-size: 1.5rem;
+}
+
+.post-description {
+  font-size: 1.1rem;
+  margin-bottom: 0.8rem;
 }
