--- a/templates/partials/_navigation.html
+++ b/templates/partials/_navigation.html
@@ -3,7 +3,7 @@
     <nav>
         <span class="logo"><a href="{% url 'main:index' %}">Learn Alert</a></span>
         <ul>
-            <li><a href="#">Videos</a></li>
+            <li><a href="{% url 'main:video_list' %}">Videos</a></li>
             <li><a href="#">Posts</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#" class="dark-mode-toggle">
