--- a/templates/partials/_video_list.html
+++ b/templates/partials/_video_list.html
@@ -1,6 +1,6 @@
 <div class="index-flex">
     {% for video in videos %}
-    <lite-youtube class="index-video" videoid="{{ video.vid_id }}" videotitle="{{ video.title }}" autoload
+    <lite-youtube class="index-video" videoid="{{ video.vid_id }}" videotitle="{{ video.title }}"
         nocookie></lite-youtube>
     {% endfor %}
 </div>
