--- a/templates/partials/_navigation.html
+++ b/templates/partials/_navigation.html
@@ -1,5 +1,5 @@
 {% load static %}
-<header>
+<header class="header">
     <nav>
         <span class="logo"><a href="{% url 'main:index' %}">Learn Alert</a></span>
         <ul>
