--- a/static/src/css/styles.css
+++ b/static/src/css/styles.css
@@ -106,6 +106,10 @@ p {
   padding-block: 0.5em;
 }
 
+.small {
+  font-size: 0.8rem;
+}
+
 /* templates/partials/_navigation.html */
 header {
   background: var(--pico-background-color) 08;
@@ -170,15 +174,6 @@ footer ul li {
   aspect-ratio: 1/1;
   border-radius: 8px;
   flex: 1 0 13rem;
-}
-
-.post-title {
-  font-size: 1.5rem;
-}
-
-.post-description {
-  font-size: 1.1rem;
-  margin-bottom: 0.8rem;
 }
 
 /* lite-youtube */
@@ -250,4 +245,22 @@ lite-youtube.lyt-activated > .lty-playbtn {
   position: absolute;
   white-space: nowrap;
   width: 1px;
+}
+
+/* blogs */
+
+.post-title {
+  font-size: 1.5rem;
+}
+
+.post-description {
+  font-size: 1.1rem;
+  font-weight: 500;
+  margin-bottom: 0.8rem;
+}
+
+.post-date {
+  font-weight: 300;
+  font-size: 0.9rem;
+  text-transform: uppercase;
 }
