--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load markdown_extras %}
 
 {% block title %}{{ post.title|capfirst }}{% endblock title %}
 
@@ -8,7 +9,7 @@
     <h2 class="post-title">{{ post.title|capfirst }}</h2>
     <p class="post-description">{{ post.description }}</p>
     <p class="post-date">Published: {{ post.published_date|date }}</p>
-    {{ post.content|safe }}
+    {{ post.content| markdown | safe }}
 </section>
 <aside>
     <div class="like-section">
