--- a/templates/base.html
+++ b/templates/base.html
@@ -5,13 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/pico.css' %}">
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/pico.css' %}">
+    <link rel="stylesheet" href="{% static 'main/css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'video/css/styles.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
-    <script src="{% static 'js/htmx.min.js' %}" defer></script>
-    <script src="{% static 'js/liteYtEmbed.js' %}" type="module"></script>
-    <script src="{% static 'js/themeToggle.js' %}" type="module"></script>
+    <script src="{% static 'main/js/htmx.min.js' %}" defer></script>
+    <script src="{% static 'main/js/liteYtEmbed.js' %}" type="module"></script>
+    <script src="{% static 'main/js/themeToggle.js' %}" type="module"></script>
     <title>{% block title %}Learn Alert{% endblock %}</title>
     {% block style %}{% endblock style %}
 </head>
