--- a/apps/blog/static/blog/css/styles.css
+++ b/apps/blog/static/blog/css/styles.css
@@ -49,6 +49,10 @@
   margin-top: 1rem;
 }
 
+.reaction-button {
+  text-shadow: 5px 5px 1px rgba(0, 0, 0, 0.1);
+}
+
 .reaction-number {
   display: flex;
   justify-content: center;
