--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,7 +1,7 @@
 <hr class="content-line">
 <footer class="footer">
     <ul>
-        <li>Learn Alert</li>
+        <li>Python on the Web</li>
     </ul>
     <ul>
         <li>
