--- a/templates/partials/_navigation.html
+++ b/templates/partials/_navigation.html
@@ -1,7 +1,7 @@
 {% load static %}
 <header class="header">
     <nav>
-        <span class="logo"><a href="{% url 'main:index' %}">Learn Alert</a></span>
+        <span class="logo"><a href="{% url 'main:index' %}">Python on the Web</a></span>
         <ul>
             <li>
                 <a href="{% url 'video:list' %}" hx-get="{% url 'video:list' %}" hx-push-url="true" hx-swap="innerHTML"
