--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -2,6 +2,9 @@
 {% load static %}
 {% load markdown_extras %}
 
+{% block meta %}
+<meta name="keywords" content="{{ post.meta_keywords }}">
+{% endblock meta %}
 {% block title %}{{ post.title|capfirst }}{% endblock title %}
 
 {% block content %}
