nuked about page, some style changes too

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,8 +6,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% block meta %}
-    {% endblock meta %}
+    {% block meta %}{% endblock meta %}
     {% compress css %}
     <link rel="stylesheet" href="{% static 'main/css/pico.css' %}">
     <link rel="stylesheet" href="{% static 'main/css/styles.css' %}">
@@ -19,6 +18,7 @@
     <script src="{% static 'main/js/liteYtEmbed.js' %}" type="module"></script>
     <script src="{% static 'main/js/themeToggle.js' %}" type="module"></script>
     {% endcompress %}
+    <link rel="shortcut icon" href="{% static 'main/code.svg' %}" type="image/x-icon">
     <title>{% block title %}Python on the Web{% endblock %}</title>
     {% block style %}{% endblock style %}
 </head>
