--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -5,7 +5,8 @@
 <h1 class="sr-only">Learn Alert Homepage</h1>
 <section class="index-section videos">
     <h2>Latest Videos</h2>
-    <p>Explore curated coding tutorials from YouTube to enhance your web development and programming skills.</p>
+    <p>Videos from the <a href="https://developers.google.com/youtube/v3" target="_blank">YouTube API</a> to help you
+        build awesome stuff</p>
     {% include 'partials/_video_list.html' %}
 </section>
 
@@ -18,10 +19,9 @@
 </section>
 
 <section class="index-section about">
-    <h3>About this project</h3>
-    <p>This website is designed to help aspiring developers through a curated list of tutorials and personal insights
-        into the
-        coding journey.</p>
+    <h3>About</h3>
+    <p>A place to see coding videos and read up on thoughts/insights about web development, Python/Django, CSS, and
+        JavaScript.</p>
 </section>
 
 {% endblock %}
