--- a/templates/partials/_footer.html
+++ b/templates/partials/_footer.html
@@ -1,7 +1,7 @@
 <hr class="content-line">
 <footer class="footer">
     <ul>
-        <li>Python on the Web</li>
+        <li><a href="{% url 'main:index' %}">Python on the Web</a></li>
     </ul>
     <ul>
         <li>
