various changes, getting ready for deployment

--- a/apps/main/static/main/css/styles.css
+++ b/apps/main/static/main/css/styles.css
@@ -81,6 +81,10 @@ p {
   text-wrap: pretty;
 }
 
+section:not(:last-of-type) {
+  margin-block-end: 3rem;
+}
+
 .sr-only {
   clip: rect(1px, 1px, 1px, 1px);
   clip-path: inset(50%);
