--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{% static 'blog/css/styles.css' %}">
     {% endcompress %}
     {% compress js %}
-    <script src="{% static 'main/js/htmx.min.js' %}" defer></script>
+    <script src="{% static 'main/js/htmx.js' %}" defer></script>
     <script src="{% static 'main/js/liteYtEmbed.js' %}" type="module"></script>
     <script src="{% static 'main/js/themeToggle.js' %}" type="module"></script>
     {% endcompress %}
