--- a/templates/blog/posts.html
+++ b/templates/blog/posts.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Blog Posts</h1>
+<h2 style="font-size: .8rem;">These were written by <a href="https://www.anthropic.com/claude"
+        target="_blank">Claude</a></h2>
 {% include 'partials/_post_list.html' %}
 {% endblock content %}
