--- a/templates/video/videos.html
+++ b/templates/video/videos.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h1>Videos</h1>
 {% include 'partials/_video_list.html' %}
 {% endblock content %}
