--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -16,14 +16,14 @@
 </section>
 
 <aside class="reaction-wrapper">
-    {% for reaction, icon, number in reactions %}
+    {% for reaction, icon, number, title in reactions %}
     <div class="{{ reaction }}-section">
         <form class="{{ reaction }}-form" action="{% url 'blog:react_to_post' post.slug reaction %}" method="post"
             hx-post="{% url 'blog:react_to_post' post.slug reaction %}" hx-trigger="click once"
             hx-target=".{{ reaction }}-count" hx-swap="innerHTML">
             {% csrf_token %}
             <input type="hidden" name="{{ reaction }}" value="{{ reaction }}">
-            <button class="{{ reaction }}-button reaction-button" type="submit">{{ icon }}</button>
+            <button class="{{ reaction }}-button reaction-button" type="submit" title="{{ title }}">{{ icon }}</button>
         </form>
         <span class="{{ reaction }}-count reaction-number">{{ number }}</span>
     </div>
