email link now has subject filled in

--- a/templates/main/index.html
+++ b/templates/main/index.html
@@ -27,7 +27,7 @@
     <p>A place to see coding videos and read up on thoughts/insights about web development, Python/Django, CSS, and
         JavaScript. The videos are gathered from YouTube and the posts are written by Anthropic/Claude. Content is
         automatically gathered and posted via cron-jobs/scripts. If you see something you like, <a
-            href="mailto:steverios.sr2@gmail.com">please let me know</a>!</p>
+            href="mailto:steverios.sr2@gmail.com?subject=Python%20on%20the%20Web%20Feedback">please let me know</a>!</p>
 </section>
 
 {% endblock %}
